Bug 153178 - FILEOPEN RTF Paragraphs before table disappear or open inside a frame
Summary: FILEOPEN RTF Paragraphs before table disappear or open inside a frame
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:24.2.0 target:7.6.4 target:24....
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTF-Paragraph
  Show dependency treegraph
 
Reported: 2023-01-24 12:07 UTC by Gabor Kelemen (Collabora)
Modified: 2024-06-18 12:05 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 (deleted)
2023-01-24 12:07 UTC, Gabor Kelemen (Collabora)
Details
The example file in Word 2016 and Writer (94.80 KB, image/png)
2023-01-24 12:07 UTC, Gabor Kelemen (Collabora)
Details
Same file without table (deleted)
2023-01-24 12:29 UTC, Gabor Kelemen (Collabora)
Details
Second example file in Word and Writer, now there is a frame (116.67 KB, image/png)
2023-01-24 12:29 UTC, Gabor Kelemen (Collabora)
Details
Updated example file (47.10 KB, application/rtf)
2023-11-28 13:59 UTC, Gabor Kelemen (Collabora)
Details
Updated second example file, without table (43.97 KB, application/rtf)
2023-11-28 14:01 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-01-24 12:07:21 UTC
Created attachment 184866 [details]
Example file from Word 2016

Attached document contains two paragraphs before a table.
When opened in Writer, only the table is visible.
If the table is removed from the file, the two paragraphs open in a frame, which is not visible in Word.

1. Open attached file. There should be two paragraph of KKK.. placeholder before the table, but they are missing.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1830bff71847a9c17715cff52383956719847fe
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded

This started in 5.1, with:
https://git.libreoffice.org/core/+/e57752170e604c85a6fe8aeaa38784796e00bab

author	Miklos Vajna <vmiklos@collabora.co.uk>	Mon Oct 26 08:56:05 2015 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	Mon Oct 26 08:56:22 2015 +0100

tdf#59454 RTF import: handle section break right before a table
Comment 1 Gabor Kelemen (Collabora) 2023-01-24 12:07:42 UTC
Created attachment 184867 [details]
The example file in Word 2016 and Writer
Comment 2 Gabor Kelemen (Collabora) 2023-01-24 12:29:16 UTC
Created attachment 184868 [details]
Same file without table
Comment 3 Gabor Kelemen (Collabora) 2023-01-24 12:29:48 UTC
Created attachment 184869 [details]
Second example file in Word and Writer, now there is a frame
Comment 4 vimalraj 2023-01-29 07:40:32 UTC
1.Steps followed to reproduce:
    -open giving attachment in libre office writer 
    -place holder before the table but missing
    -after deleting table the paragraph not visible
2.Environment
    - OS        :linuxmint
    - RAM       : 4gb 
    - Processor :AMD PRO A4-4350B R4, 5 COMPUTE CORES 2C+3G × 2
3.Results
    -Bug reproduced
4.Status
    - New
Comment 5 vimalraj 2023-01-29 07:55:11 UTC
(In reply to vimalraj from comment #4)
> 1.Steps followed to reproduce:
>     -open giving attachment in libre office writer 
>     -place holder before the table but missing
>     -after deleting table the paragraph not visible
> 2.Environment
>     - OS        :linuxmint 21.1 Cinnamon
>     - RAM       : 4gb 
>     - Processor :AMD PRO A4-4350B R4, 5 COMPUTE CORES 2C+3G × 2
> 3.Results
>     -Bug reproduced
> 4.Status
>     - New
Comment 6 Miklos Vajna 2023-11-06 10:55:02 UTC
This is assigned already, so removing it from my dashboard.
Comment 7 Commit Notification 2023-11-10 09:34:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4e2f2489c4c7436f8b3a21a530bc625cbef4e365

tdf#153178 writerfilter: do not create text frame spuriously

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-11-10 23:05:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/f24ad883b15a8112d7dfeb4de14afaf67da30a47

tdf#153178 writerfilter: do not create text frame spuriously

It will be available in 7.6.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gabor Kelemen (Collabora) 2023-11-16 21:43:02 UTC
Checked in todays nightly:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5fe2bf914c251009ec4709fa8fdc45c3b53f676b
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Both files look like in Word.
Comment 10 Gabor Kelemen (Collabora) 2023-11-28 13:59:28 UTC
Created attachment 191091 [details]
Updated example file
Comment 11 Gabor Kelemen (Collabora) 2023-11-28 14:01:44 UTC
Created attachment 191092 [details]
Updated second example file, without table
Comment 12 Xisco Faulí 2023-11-29 13:21:07 UTC
The content of attachment 184866 [details] has been deleted for the following reason:

User's request
Comment 13 Xisco Faulí 2023-11-29 13:23:16 UTC
The content of attachment 184868 [details] has been deleted for the following reason:

User's request
Comment 14 Commit Notification 2023-12-19 07:59:19 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/940b60c903b11340979eaf37b9b1dad5d823a1c4

partial revert tdf#153178 writerfilter: do not create text frame spuriously

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2023-12-19 08:04:22 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf58950b281c85c366e0948557151a0fe104ed81

partial revert tdf#153178 writerfilter: do not create text frame spuriously2

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2023-12-19 15:09:52 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/7bcc477bc98bbcc4ee0e12e812e17aaa9cfd8803

partial revert tdf#153178 writerfilter: do not create text frame spuriously

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2023-12-19 15:10:55 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/3e3673313ddd6cec629cdaf6a2b22f508003960d

partial revert tdf#153178 writerfilter: do not create text frame spuriously2

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2023-12-20 07:29:59 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/9d1438cd46ab947d1e6276cefa29444dace09f8a

partial revert tdf#153178 writerfilter: do not create text frame spuriously

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2023-12-20 10:04:36 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/a13187055aab91cdbd0fffe309124c2a06a81032

partial revert tdf#153178 writerfilter: do not create text frame spuriously2

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.